# WWPM_Project

./: .gitignore  WWRM_Project.py  WWRM_Project_package.spec  account.json  main.py  oil_well_data.pkl  pyproject.toml  water_report.sql  wwrm_project_package.spec
asserts/: user_account_ui.py
asserts/ui/: storage_oil_view.ui  storage_oil_view_ui.py  storage_view.ui  storage_view_ui.py
assets/: user_account.ui  user_account_ui.py
assets/ui/: storage_view_ui.py  user_manager_component.ui
data/: db_water_report.sql  oil_well_data.pkl
hooks/: hook-cryptography.py
src/: admin_page.py  formula.py  main.py  main_page.py  user_account_page.py
src/config/: db_config.py
src/controller/: formula_controller.py  login_controller.py  oil_well_data.pkl  storage_controller.py  storage_oil_controller.py
src/core/: constant.py  dataclass.py  enums.py
src/dataBase/: __init__.py  db_oil_schema.py  db_schema.py  oil_report_dao.py  user_account_dao.py  water_report_dao.py
src/database/: db_oil_schema.py  db_schema.py  formula_dao.py  oil_report_dao.py  user_account_dao.py  water_report_dao.py
src/interface/: storage_view_ui.py  user_account_ui.py  user_manager_component_ui.py
src/model/: formula_model.py  login_model.py  storage_model.py  storage_oil_model.py
src/view/: admin_view.py  formula_view.py  login_view.py  main_view.py  storage_view.py  user_account_view.py
src/view/baseView/: message_base_view.py
src/wwpm/: __init__.py  admin_page.py  main.py  main_page.py  user_account_page.py
src/wwpm/controller/: login_controller.py  storage_controller.py  (+1 more)
(+11 files in other folders)
